Modificaciones para el despliegue en servidor